--- a/rratings/install.txt
+++ b/rratings/install.txt
@@ -39,3 +39,10 @@ echo rating_bar('foto'.$this->_tpl_vars['photo']['id'],'');
 
 
 Пользуйтесь на здоровье.
+P.S.
+Если у кого есть желание помочь:
+Вебмани: 
+R368410038480
+Z304804006659
+Яндекс: 
+410011591859083
